--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <h4>Adam Hudson</h4>
     
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach
-      technical sophistication, the seemingly magical ability to take
-      command of your computer and get it to do your bidding. This includes
-      everything from command lines and coding to guessing keyboard shortcuts,
-      Googling error messages, and knowing when to just reboot the darn thing.
-      We believe there are at least a billion people who can benefit from
-      learning technical sophistication, probably more. To join our
-      movement, sign up for our official email list now.
+      Learn Enough to Be Dangerous is a leader in the movement to teach<br>
+      technical sophistication, the seemingly magical ability to take<br>
+      command of your computer and get it to do your bidding. This includes<br>
+      everything from command lines and coding to guessing keyboard shortcuts,<br>
+      Googling error messages, and knowing when to just reboot the darn thing.<br>
+      We believe there are at least a billion people who can benefit from<br>
+      learning technical sophistication, probably more. To join our<br>
+      movement, sign up for our official email list now.<br>
     </p>
 
 </body>
