--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
     <p>Hello World!</p>
 
     <h1>The Learn Enough Story</h1>
-    
+
     <h4>Adam Hudson</h4>
-    
+
     <p>
-      Learn Enough to Be Dangerous is a leader in the movement to teach<br>
-      technical sophistication, the seemingly magical ability to take<br>
-      command of your computer and get it to do your bidding. This includes<br>
-      everything from command lines and coding to guessing keyboard shortcuts,<br>
-      Googling error messages, and knowing when to just reboot the darn thing.<br>
-      We believe there are at least a billion people who can benefit from<br>
-      learning technical sophistication, probably more. To join our<br>
-      movement, sign up for our official email list now.<br>
+        Learn Enough to Be Dangerous is a leader in the movement to teach<br>
+        <em>technical sophistication</em>, the seemingly magical ability to take<br> command of your computer and get it to do your bidding. This includes<br> everything from command lines and coding to guessing keyboard shortcuts,<br> Googling error
+        messages, and knowing when to just reboot the darn thing.<br> We believe there are <strong>at least a billion people</strong> who can benefit from<br> learning technical sophistication, probably more. To join our<br> movement, <a href="http://learnenough.com/email">sign up for our official email list</a>        now.<br>
     </p>
 
+
+    <h2>Background</h2>
+
+    <p>
+        Learn Enough to Be Dangerous is an outgrowth of the
+        <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the
+        <a href="http://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for
+        <a target="_blank" href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to
+      Be Dangerous</em></a>, which teaches the basics of
+        <strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup
+        <strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at
+        <a target="_blank" href="http://learnenough.com/">learnenough.com</a>.
+    </p>
 </body>
 
 </html>
