--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
     <p>Hello World!</p>
 
+    <h2>Founders</h2>
+
+    <h3>Lee Donahoe</h3>
+
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150" alt="Lee Donahoe">
+
     <h1>The Learn Enough Story</h1>
 
     <h4>Adam Hudson</h4>
@@ -33,6 +39,9 @@
         <strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at
         <a target="_blank" href="http://learnenough.com/">learnenough.com</a>.
     </p>
+
+    <img src="images/kitten.jpg" alt="An adorable kitten">
+
 </body>
 
 </html>
