--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         messages, and knowing when to just reboot the darn thing.<br> We believe there are <strong>at least a billion people</strong> who can benefit from<br> learning technical sophistication, probably more. To join our<br> movement, <a href="http://learnenough.com/email">sign up for our official email list</a>        now.<br>
     </p>
 
-
     <h2>Background</h2>
 
     <p>
@@ -40,7 +39,9 @@
         <a target="_blank" href="http://learnenough.com/">learnenough.com</a>.
     </p>
 
-    <img src="images/kitten.jpg" alt="An adorable kitten">
+    <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+        <img src="images/kitten.jpg" alt="An adorable kitten">
+    </a>
 
 </body>
 
