adding to table

--- a/tags.html
+++ b/tags.html
@@ -78,6 +78,13 @@
             <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
             <td><em>technical sophistication</em></td>
         </tr>
+        <tr>
+            <td><code>strong</code></td>
+            <td>strong</td>
+            <td> make bolded text</td>
+            <td><code>&lt;strong&gt;BOLD AF<code>&lt;strong&gt;</code></code></td>
+            <td><strong>BOLD AF</strong></td>
+        </tr>
     </table>
 
 </body>
