--- a/tags.html
+++ b/tags.html
@@ -81,9 +81,16 @@
         <tr>
             <td><code>strong</code></td>
             <td>strong</td>
-            <td> make bolded text</td>
+            <td>make bolded text</td>
             <td><code>&lt;strong&gt;BOLD AF<code>&lt;strong&gt;</code></code></td>
             <td><strong>BOLD AF</strong></td>
+        </tr>
+        <tr>
+            <td><code>img</code></td>
+            <td>image</td>
+            <td>link an image</td>
+            <td><code>&lt;img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"&gt;</code></td>
+            <td>*see above image*</td>
         </tr>
     </table>
 
