fixing img in table

--- a/tags.html
+++ b/tags.html
@@ -90,7 +90,7 @@
             <td>image</td>
             <td>link an image</td>
             <td><code>&lt;img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"&gt;</code></td>
-            <td>*see above image*</td>
+            <td><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></td>
         </tr>
     </table>
 
