--- a/tags.html
+++ b/tags.html
@@ -6,93 +6,107 @@
     <meta charset="utf-8">
 </head>
 
+
 <body>
 
-    <h1>Important HTML tags</h1>
+    <!-- much here to be styled, will do so in last section -->
+    <header>
+        <h1>HTML Introduction</h1>
+        <h2>Tags</h2>
+    </header>
 
-    <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
+    <div>
+        <h1>Important HTML tags</h1>
 
-    <p>
-        This page is designed as a quick reference for some of the common tags covered in <a href="http://learnenough.com/html-tutorial"><em>Learn
-      Enough HTML to Be Dangerous</em></a>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
-    </p>
+        <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
 
-    <p>
-        The tables below don't include all HTML tags, but they do list many of the most important ones.
-    </p>
+        <p>
+            <span>This page is designed as a quick reference for some of the common tags covered in <a href="http://learnenough.com/html-tutorial"><em>Learn
+      Enough HTML to Be Dangerous</em></a></span>. In the process of making it, we'll learn how to make HTML <em>tables</em> via <code>table</code> and related tags.
+        </p>
 
-    <h2>Block Elements</h2>
+        <p>
+            The tables below don't include all HTML tags, but they do list many of the most important ones.
+        </p>
 
-    <table>
-        <tr>
-            <th>Tag</th>
-            <th>Name</th>
-            <th>Purpose</th>
-        </tr>
-        <tr>
-            <td><code>h1</code>&ndash;<code>h6</code></td>
-            <td>headings</td>
-            <td>include a heading (levels 1&ndash;6)</td>
-        </tr>
-        <tr>
-            <td><code>p</code></td>
-            <td>paragraph</td>
-            <td>include a paragraph of text</td>
-        </tr>
-        <tr>
-            <td><code>table</code></td>
-            <td>table</td>
-            <td>include a table</td>
-        </tr>
-        <tr>
-            <td><code>tr</code></td>
-            <td>table row</td>
-            <td>include a row of data</td>
-        </tr>
-        <tr>
-            <td><code>th</code></td>
-            <td>table header</td>
-            <td>make a table header</td>
-        </tr>
-        <tr>
-            <td><code>td</code></td>
-            <td>table data</td>
-            <td>include a table data cell</td>
-        </tr>
-    </table>
+    </div>
 
-    <h2>Inline Elements</h2>
+    <div>
+        <h2>Block Elements</h2>
 
-    <table>
-        <tr>
-            <th>Tag</th>
-            <th>Name</th>
-            <th>Purpose</th>
-            <th>Example</th>
-            <th>Result</th>
-        </tr>
-        <tr>
-            <td><code>em</code></td>
-            <td>emphasized</td>
-            <td>make emphasized text</td>
-            <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
-            <td><em>technical sophistication</em></td>
-        </tr>
-        <tr>
-            <td><code>strong</code></td>
-            <td>strong</td>
-            <td>make bolded text</td>
-            <td><code>&lt;strong&gt;BOLD AF<code>&lt;strong&gt;</code></code></td>
-            <td><strong>BOLD AF</strong></td>
-        </tr>
-        <tr>
-            <td><code>img</code></td>
-            <td>image</td>
-            <td>link an image</td>
-            <td><code>&lt;img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"&gt;</code></td>
-            <td><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></td>
-        </tr>
-    </table>
+        <table>
+            <tr>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Purpose</th>
+            </tr>
+            <tr>
+                <td><code>h1</code>&ndash;<code>h6</code></td>
+                <td>headings</td>
+                <td>include a heading (levels 1&ndash;6)</td>
+            </tr>
+            <tr>
+                <td><code>p</code></td>
+                <td>paragraph</td>
+                <td>include a paragraph of text</td>
+            </tr>
+            <tr>
+                <td><code>table</code></td>
+                <td>table</td>
+                <td>include a table</td>
+            </tr>
+            <tr>
+                <td><code>tr</code></td>
+                <td>table row</td>
+                <td>include a row of data</td>
+            </tr>
+            <tr>
+                <td><code>th</code></td>
+                <td>table header</td>
+                <td>make a table header</td>
+            </tr>
+            <tr>
+                <td><code>td</code></td>
+                <td>table data</td>
+                <td>include a table data cell</td>
+            </tr>
+        </table>
+
+        <h2>Inline Elements</h2>
+
+        <table>
+            <tr>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Purpose</th>
+                <th>Example</th>
+                <th>Result</th>
+            </tr>
+            <tr>
+                <td><code>em</code></td>
+                <td>emphasized</td>
+                <td>make emphasized text</td>
+                <td><code>&lt;em&gt;technical sophistication&lt;/em&gt;</code></td>
+                <td><em>technical sophistication</em></td>
+            </tr>
+            <tr>
+                <td><code>strong</code></td>
+                <td>strong</td>
+                <td>make bolded text</td>
+                <td><code>&lt;strong&gt;BOLD AF<code>&lt;strong&gt;</code></code>
+                </td>
+                <td><strong>BOLD AF</strong></td>
+            </tr>
+            <tr>
+                <td><code>img</code></td>
+                <td>image</td>
+                <td>link an image</td>
+                <td><code>&lt;img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"&gt;</code></td>
+                <td><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></td>
+            </tr>
+        </table>
+
+    </div>
 
 </body>
 
