--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <body>
 
+    <div>
+        <a href="index.html">Home</a>
+        <a href="moby_dick.html">Moby Dick</a>
+        <a href="tags.html">HTML Tags</a>
+    </div>
+
     <p>Hello World!</p>
 
     <h2>Founders</h2>
