--- a/tags.html
+++ b/tags.html
@@ -11,7 +11,7 @@
 
     <div>
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="moby-dick.html">Moby Dick</a>
       <a href="tags.html">HTML Tags</a>
     </div>
     
