--- a/moby-dick.html
+++ b/moby-dick.html
@@ -15,9 +15,9 @@
     </div>
 
     <!-- much here to be styled, will do so in last section -->
-    <header>
-        <h1 style="text-align: center;">A Softcover Book Report</h1>
-        <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
+    <header style="text-align: center; margin: 0 0 80px;">
+        <h1>A Softcover Book Report</h1>
+        <h2>>Moby-Dick (or, The Whale)</h2>
     </header>
 
     <div>
@@ -31,7 +31,7 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-        <img src="images/sperm_whales.jpg" alt="Sperm Whales">
+        <img src="images/sperm_whales.jpg" alt="Sperm Whales" style="display: block; margin: 0 auto;">
     </a>
 
     <div>
@@ -39,7 +39,7 @@
         <h3>Moby-Dick: A classic tale of the sea</h3>
 
         <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank">
-            <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin: 0 40px 0 0;">
+            <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; display: block; margin: 0 auto;">
         </a>
 
         <p>
