fixing nav links

--- a/moby-dick.html
+++ b/moby-dick.html
@@ -8,10 +8,10 @@
 
 <body>
 
-    <div>
-        <a href="index.html">Home</a>
-        <a href="moby-dick.html">Moby Dick</a>
-        <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html" text-decoration="none">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby-dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <!-- much here to be styled, will do so in last section -->
