--- a/moby-dick.html
+++ b/moby-dick.html
@@ -11,13 +11,13 @@
     <div style="text-align: right;">
       <a href="index.html" style="text-decoration: blue;">Home</a>
       <a href="tags.html" style="text-decoration: blue; margin: 0 0 0 10px;">HTML Tags</a>
-      <a href="moby-dick.html" style="text-decoration: blue; margin: 0 0 0 10px;">Moby Dick</a>
+      <a href="moby-dick.html" style="color: blue; text-decoration: none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <!-- much here to be styled, will do so in last section -->
     <header style="text-align: center; margin: 0 0 80px;">
         <h1>A Softcover Book Report</h1>
-        <h2>>Moby-Dick (or, The Whale)</h2>
+        <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
     <div>
