--- a/moby-dick.html
+++ b/moby-dick.html
@@ -9,8 +9,8 @@
 <body>
 
     <div style="text-align: right;">
-      <a href="index.html" style="text-decoration: blue;">Home</a>
-      <a href="tags.html" style="text-decoration: blue; margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="index.html" style="color: blue; text-decoration: none; text-decoration: blue;">Home</a>
+      <a href="tags.html" style="color: blue; text-decoration: none; text-decoration: blue; margin: 0 0 0 10px;">HTML Tags</a>
       <a href="moby-dick.html" style="color: blue; text-decoration: none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
