--- a/tags.html
+++ b/tags.html
@@ -10,10 +10,11 @@
 <body>
 
     <div style="text-align: right;">
-      <a href="index.html">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px;">HTML Tags</a>
-      <a href="moby-dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+      <a href="index.html" style="color: blue; text-decoration: none; text-decoration: blue;">Home</a>
+      <a href="tags.html" style="color: blue; text-decoration: none; text-decoration: blue; margin: 0 0 0 10px;">HTML Tags</a>
+      <a href="moby-dick.html" style="color: blue; text-decoration: none; margin: 0 0 0 10px;">Moby Dick</a>
     </div>
+
     
     <!-- much here to be styled, will do so in last section -->
     <header>
